# rag_llm

./: .env  .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
rag_trial/cli_tools/: rag_code_base.py  rag_test_ollama.py
