[project]
name = "rag-trial"
version = "0.1.0"
description = "This is a small project to test RAG for the LLM using langchain + ollama"
authors = [
    {name = "Ivan Pevtsov",email = "ivan.pevtsov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"

[tool.poetry.dependencies]
langchain = "^0.3.25"
langchain-community = "^0.3.23"
langchain-ollama = "^0.3.2"
langchain-huggingface = "^0.2.0"
chainlit = "^2.5.5"
langchain-core = "^0.3.62"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
